Base memory of MergeMem node violates assert during killing expanded AllocateArray node

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • hs21
    • Affects Version/s: hs14
    • Component/s: hotspot
    • b04
    • generic
    • generic
    • Not verified

        Server jvm could fail fail with
        > # A fatal error has been detected by the Java Runtime Environment:
        > #
        > # Internal Error (/export/users2/lab_ipfjbld/nightly/dev/r1767_08-12-22_0800/sources/hotspot/src/share/vm/opto/memnode.cpp:3793), pid=5400, tid=2305843017755292288
        > # Error: assert(Node::in_dump() || n == __null || n->bottom_type() == Type::TOP || n->adr_type() == TypePtr::BOTTOM || n->adr_type() == TypeRawPtr::BOTTOM || Compile::current()->AliasLevel() == 0,"must be a wide memory")


        The reason of failure is that the assert happens because during iGVN optimization after macro expanding the base
        memory of MergeMem node does not satisfy the assertion. This MergeMem node is located between AllocateArray and Initialize nodes.

              Assignee:
              Vladimir Kozlov
              Reporter:
              Ekaterina Pavlova
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: