6812217: Base memory of MergeMem node violates assert during killing expanded AllocateArray node

The assert in MergeMemNode::memory_at() misses the case when address is TOP.

Reviewed-by: never